--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "firebase": "*",
+    "angular": "*",
+    "foundation": "*",
+    "lodash": "*"
   },
   "dependencies": {
-    "angular": "^1.5.7",
-    "foundation": "^4.2.1-1",
-    "lodash": "^4.13.1"
+    "angularfire": "^2.0.1",
+    "firebase": "^3.2.0"
   }
 }
