--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "gulp-webserver": "^0.9.1",
     "jquery": "^2.2.3",
     "firebase": "*",
-    "angular": "*",
     "foundation": "*",
     "lodash": "*"
   },
   "dependencies": {
+    "angular": "^1.5.7",
     "angularfire": "^2.0.1",
     "firebase": "^3.2.0"
   }
